editing the refernce on the nav-bar for all pages

--- a/about.html
+++ b/about.html
@@ -177,9 +177,9 @@ var myVar = setInterval(function(){ myTimer() }, 60);
               <div class="topnav">
                     <a href="index.html">Home</a>
                     <a href="services.html">services</a>
-                    <a href="contact us .html">Contact</a>
+                    <a href="con test.html">Contact</a>
                     <a class="active" href"="about.html">About us</a>
-                    <a href="projects.html">Projects</a> <!-- Corrected the href -->
+                    <a href="projects - Copy.html">Projects</a> <!-- Corrected the href -->
                     <a class="logo" rel="index" href="#index.html">
                     <img src="img/bim-small.png" alt="static">
                   </div>
