--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ body {
   <a href="services.html">services</a>
   <a href="con test.html">Contact</a>
   <a href="about.html">About us</a>
-  <a href ="projects.html">Projects</a>
-  <a href="projects - Copy.html">TEST</a>
+  <a href ="projects - Copy.html">Projects</a>
+  <!-- <a href="projects - Copy.html">TEST</a> -->
 </div>
 
 <div style="padding-left:16px">
