--- a/projects - Copy.html
+++ b/projects - Copy.html
@@ -55,9 +55,9 @@
     <div class="topnav">
       <a href="index.html">Home</a>
       <a href="services.html">services</a>
-      <a href="contact us .html">Contact</a>
+      <a href="con test.html">Contact</a>
       <a href="about.html">About us</a>
-      <a class="active" href ="projects.html">Projects</a>
+      <a class="active" href ="projects - Copy.html">Projects</a>
     </div>
     <div class="sticky-container">
       <div class="bg-text">
