--- a/con test.html
+++ b/con test.html
@@ -82,9 +82,9 @@ p{ font-size:14pt;font-family: 'Moayad_Light', Arial, Helvetica, sans-serif; }
     <div class="topnav">
         <a class="topnav" href="index.html">Home</a>
         <a href="services.html">services</a>
-        <a class="active"href="contact us .html">Contact</a>
+        <a class="active"href="con test.html">Contact</a>
         <a href="about.html">About us</a>
-        <a href="projects.html">Projects</a> <!-- Corrected the href -->
+        <a href="projects - Copy.html">Projects</a> <!-- Corrected the href -->
       </div>
                                                                          <!--start of particles code -->
       <div id="particles-js"><canvas height="608" width="1301" style="width: 100%; height: 100%;"></canvas></div>
