--- a/projects - Copy.html
+++ b/projects - Copy.html
@@ -54,7 +54,7 @@
     
     <div class="topnav">
       <a href="index.html">Home</a>
-      <a href="services.html">services</a>
+      <a href="services.html">Services</a>
       <a href="con test.html">Contact</a>
       <a href="about.html">About us</a>
       <a class="active" href ="projects - Copy.html">Projects</a>
