--- a/services.html
+++ b/services.html
@@ -353,7 +353,7 @@ $(".chart-group").on("click", function() {
   <div class="topnav">
         <a class="{% static '' %}" href="index.html">Home</a>
         <a class="active" href="services.html">services</a>
-        <a href="contact us .html">Contact</a>
+        <a href="con test.html">Contact</a>
         <a href="about.html">About us</a>
         <a href="projects.html">Projects</a> <!-- Corrected the href -->
         <a class="logo" rel="index" href="index.html">
