corret the project href

--- a/services.html
+++ b/services.html
@@ -126,7 +126,7 @@ var myVar = setInterval(function(){ myTimer() }, 60);
                 <a rel="BIM" href="bim.html" class="m-menu"><i class="fa fa-user-secret"></i><div class="arr-class"></div></a>
                 <a rel="about" href="aboutus.html" class="m-menu"><i class="fa fa-skyatlas"></i><div class="arr-class"></div></a>
                 <a rel="services" href="services.html" class="active m-menu"><i class="fa fa-terminal"></i><div class="arr-class"></div></a>
-                <a rel="projects" href="projects.php" class="m-menu"><i class="fa fa-picture-o"></i><div class="arr-class"></div></a>
+                <a rel="projects" href="projects - Copy.html" class="m-menu"><i class="fa fa-picture-o"></i><div class="arr-class"></div></a>
                 <a rel="contact" href="contactus.php" class="m-menu"><i class="fa fa-envelope-o"></i><div class="arr-class"></div></a>
             </nav>
 
@@ -355,7 +355,7 @@ $(".chart-group").on("click", function() {
         <a class="active" href="services.html">services</a>
         <a href="con test.html">Contact</a>
         <a href="about.html">About us</a>
-        <a href="projects.html">Projects</a> <!-- Corrected the href -->
+        <a href="projects - Copy.html">Projects</a> <!-- Corrected the href -->
         <a class="logo" rel="index" href="index.html">
         <img src="img/bim-small.png" alt="horizontal">
       </div>
