add a template for the projects

--- a/projects - Copy.html
+++ b/projects - Copy.html
@@ -365,7 +365,7 @@
             <!-- Photo Grid -->
             <div class="row"> 
               <div class="column">
-                <a href="index.html"><img src="image test\4.jpg" alt="image1" style="width:100%;border-radius: 4%;"></a>
+                <a href="project1.html"><img src="New folder\Ray White Residence _ BIM Lab\Renders (2880px)\TNAIL\001.jpg" alt="image1" style="width:100%;border-radius: 4%;"></a>
                 <a href="services.html"><img src="image test\5.jpg" style="width:100%;border-radius: 4%;"></a>
                 <a href="projects.html"><img src="image test\images (4).jfif" style="width:100%;border-radius: 4%;"></a>
                 <a href="index.html"><img src="image test\images (5).jfif" style="width:100%;border-radius: 4%;"></a>
