update the contact us button

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ $(this).children('.arr-class').hide();
             <h1 style="font-family:'Moayad_Light',Arial, Helvetica, sans-serif;color: rgb(222, 56, 9);">Studio design & Engineering Services /      BIM Services</h1>
 
             
-            <a style="opacity: 1;" rel="contact" href="contactus.php" class="flat-button">
+            <a style="opacity: 1;" rel="contact" href="con test.html" class="flat-button">
                                   <span style="font-family:'Moayad_Light', Arial, Helvetica, sans-serif; color : #fff"> CONTACT US</span>
                 
             </a>
