--- a/project  - 10 .html
+++ b/project  - 10 .html
@@ -461,56 +461,43 @@ img {
             <script src="javascript/app.js"></script>
         </div>
         <!-- <h2 style="text-align:center">Slideshow Gallery</h2> -->
-        <h2 style="color: #f06c00;">Ray white Residence</h2> 
+        <h2 style="color: #f06c00;">PRIVATE RESIDENCE - KHALDA -</h2> 
         <!-- <h3 style="color: #808080;">Project description</h3> -->
 <!--top images of the gallery-->
 <div class="container">
   <div class="mySlides">
-    <div class="numbertext">1 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Renders (2880px)\TNAIL\001.jpg" style="width:90%;padding-left: 200px ; height: 750px;">
+    <div class="numbertext">1 / 7</div>
+    <img src="PRIVATE VILLA\001.jpeg" style="width:90%;padding-left: 200px ; height: 750px;">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">2 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Renders (2880px)\005.jpg" style="width:90%;padding-left: 200px ; height: 750px;">
+    <div class="numbertext">2 / 7</div>
+    <img src="PRIVATE VILLA\002.jpeg" style="width:90%;padding-left: 200px ; height: 750px;">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">3 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\FIRST.jpg" style="width:75%;padding-left: 450px ; height: 750px;">
+    <div class="numbertext">3 / 7</div>
+    <img src="PRIVATE VILLA\003.jpeg" style="width:75%;padding-left: 450px ; height: 750px;">
   </div>
     
   <div class="mySlides">
-    <div class="numbertext">4 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\TOP PLAN.jpg" style="width:75%;padding-left: 450px ; height: 750px;">
+    <div class="numbertext">4 / 7</div>
+    <img src="PRIVATE VILLA\004.jpeg" style="width:75%;padding-left: 450px ; height: 750px;">
   </div>
 
   <div class="mySlides">
-    <div class="numbertext">5 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\MAIN ELEVATION.jpg" style="width:91%;padding-left: 150px ; height: 750px;">
+    <div class="numbertext">5 / 7</div>
+    <img src="PRIVATE VILLA\005.jpeg" style="width:91%;padding-left: 150px ; height: 750px;">
   </div>
     
   <div class="mySlides">
-    <div class="numbertext">6 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\MAIN ELEVATION.jpg" style="width:91%;padding-left: 150px ; height: 750px;">
+    <div class="numbertext">6 / 7</div>
+    <img src="PRIVATE VILLA\006.jpeg" style="width:80%;padding-left: 450px ; height: 750px;">
   </div>
   <div class="mySlides">
-    <div class="numbertext">7/8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\TOP PLAN.jpg" style="width: 75%;padding-left: 450px ; height: 750px;">
+    <div class="numbertext">7 / 7</div>
+    <img src="PRIVATE VILLA\007.jpeg" style="width: 75%;padding-left: 450px ; height: 750px;">
   </div>
-  <div class="mySlides">
-    <div class="numbertext">8 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\LANDSCAPE.jpg" style="width:90%;padding-left: 200px ; height: 750px;">
-  </div>
-  <div class="mySlides">
-    <div class="numbertext">8 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\LANDSCAPE.jpg" style="width:90%;padding-left: 200px ; height: 750px;">
-  </div>
-  <div class="mySlides">
-    <div class="numbertext">8 / 8</div>
-    <img src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\LANDSCAPE.jpg" style="width:90%;padding-left: 200px ; height: 750px;">
-  </div>
-  
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
 
@@ -520,26 +507,25 @@ img {
 <!--low hover images galeray-->
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="C:\Users\Osama al khreishah\Desktop\COMPANY\STOLEN\BIM-LAB_SITE\New folder\Ray White Residence _ BIM Lab\Renders (2880px)\TNAIL\001.jpg" style="width:100%;height: 93.27px;" onclick="currentSlide(1)" alt="BASEMENT">
+      <img class="demo cursor" src="PRIVATE VILLA\001.jpeg" style="width:100%;height: 93.27px;" onclick="currentSlide(1)" alt="PRIVATE RESIDENCE - KHALDA -">
     </div>
     <div class="column">
-      <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\LANDSCAPE.jpg" style="width:100%;height: 93.27px;" onclick="currentSlide(2)" alt="First">
+      <img class="demo cursor" src="PRIVATE VILLA\002.jpeg" style="width:100%;height: 93.27px;" onclick="currentSlide(2)" alt="PRIVATE RESIDENCE - KHALDA -">
     </div>
     <div class="column">
-      <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\FIRST.jpg" style="width:100%;height: 93.27px;" onclick="currentSlide(3)" alt="GROUND">
+      <img class="demo cursor" src="PRIVATE VILLA\003.jpeg" style="width:100%;height: 93.27px;" onclick="currentSlide(3)" alt="PRIVATE RESIDENCE - KHALDA -">
     </div>
     <div class="column">
-      <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\SITE PLAN.jpg" style="width:100%;height: 93.27px;" onclick="currentSlide(4)" alt="LANDSCAPE">
+      <img class="demo cursor" src="PRIVATE VILLA\004.jpeg" style="width:100%;height: 93.27px;" onclick="currentSlide(4)" alt="PRIVATE RESIDENCE - KHALDA -">
     </div>
-    <div class="column">
-      <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\MAIN ELEVATION.jpg" style="width:100%;height: 93.27px;" onclick="currentSlide(5)" alt="Main elevation">
+    <div class="column"><img class="demo cursor" src="PRIVATE VILLA\005.jpeg" style="width:100%;height: 93.27px;" onclick="currentSlide(5)" alt="PRIVATE RESIDENCE - KHALDA -">
     </div>    
     <div class="column">
-      <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\SECTION.jpg" style="width:100%;height: 93.27px;" onclick="currentSlide(6)" alt="Section">
+      <img class="demo cursor" src="PRIVATE VILLA\006.jpeg" style="width:100%;height: 93.27px;" onclick="currentSlide(6)" alt="PRIVATE RESIDENCE - KHALDA -">
   </div>
   <div class="row">
     <div class="column">
-      <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Renders (2880px)\005.jpg" style="width: 204.75px;height: 93.27px;"onclick = "currentSlide(8)" alt="whatever">
+      <img class="demo cursor" src="PRIVATE VILLA\007.jpeg" style="width: 204.75px;height: 93.27px;"onclick = "currentSlide(8)" alt="PRIVATE RESIDENCE - KHALDA -">
     </div>
     <!-- <div class="column">
       <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\TOP PLAN.jpg" style="width:159px;height: 93.27px;" onclick="currentSlide(7)" alt="Top plan " >
@@ -548,15 +534,6 @@ img {
   </div>
   </div>
 <div class="row">
-  <div class="column">
-    <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\TOP PLAN.jpg" style="width: 100%;height: 93.27px;"onclick="currentSlide(9)" alt="top plan">
-  </div>
-  <div class="column">
-    <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\TOP PLAN.jpg" style="width: 100%;height: 93.27px;"onclick="currentSlide(9)" alt="top plan">
-  </div>
-  <div class="column">
-    <img class="demo cursor" src="New folder\Ray White Residence _ BIM Lab\Drawings (jpg)\TOP PLAN.jpg" style="width: 100%;height: 93.27px;"onclick="currentSlide(9)" alt="top plan">
-  </div>
 </div>
 
 <script>
@@ -590,24 +567,21 @@ function showSlides(n) {
 }
 </script>
 <div class="project-description">
-  <h2 style="color: #f06c00;">Ray White Residence</h2>
-  <p style="color: #f0f0f0;">RAY WHITE is a residence built on a total site area of 2,790 sq meters, located in Al-Fuheis town which is a residential district between Salt and the capital Amman. At the top of a hill, RAY WHITE integrated with landscape made up of slope, plants and water features. Captured the spectacular, unimpeded panoramas that are stylishly designed in a modern style. Landscape architects and design architects aim to establish symbiotic connection between buildings and their surroundings. </p>
+  <h2 style="color: #f06c00;">PRIVATE RESIDENCE - KHALDA -</h2>
+  <p style="color: #f0f0f0;">TOTAL AREA 1450 M2. </p>
   
   <h3 style="color: #f06c00;">Project Details</h3>
   <ul style="color: #f0f0f0;">
     <li>Location: [Amman,Jordan]</li>
     <li>Architecture Firm: BIM Lab</li>
-    <li>Year: [Project Year]</li>
+    <li>Year: </li>
     <li>Lead Architects: Shaker Khulief</li>
     <li>Lead Architects e-mail: Shaker.kh@bimlab.com</li>
   </ul>
   
   <h3 style="color: #f06c00;">Project Description</h3>
-  <p style="color: #f0f0f0;">The Ray White Residence consists of two masses connecting together, comprised of local materials with glass, both masses are cantilevered above the landscape, one mass is sited on a stone wall that runs both inside and outside of the house as a structural element to support, the other mass is supported by steel system and structural columns to support, providing such a magnificent through the overlooking infinity pool.
-    the residence consists of three floors, the basement floor contains parking and services, the ground floor contains living spaces, and the first floor private four master's bedrooms, seating area and private terraces. The basic spatial system of the split level was created to address the programmatic need for adaptable spaces and to accommodate the topography of the site.
-    The large openings allow extensive views of the surrounding significant landscape which creates rich experience and helps the building blend into the landscape, while large expanses glass allow the house to be central-ventilation free.
-    Natural resources are used at the residence, such as the sun and the wind. The sun provides the natural lighting during the daytime, through skylights distributed throughout the roof and generous openings for windows, also heats the water in the bathrooms and kitchen, as long as keeping the pool water warm, the wind is providing cross ventilation of the residence to keep it cool.
-    </p>
+  <p style="color: #f0f0f0;">
+    TOTAL AREA 1450 M2</p>
   
   <!-- <p>Key features of this project include:</p>
   <ul>
