delete un used images and files

--- a/services - Copy.html
+++ b/services - Copy.html
@@ -159,7 +159,7 @@ In addition, modelling can be done for analysis purposes.</p>
         </div>
         
         <div style="display: none" id="c1">
-         <h1 style="color:#FFF;font-family:'Moayad_Regular', Arial, Helvetica, sans-serif;" class="mouseout">BIM Design and Modeling</h1>
+         <h1 style="color:#FFF;font-family:'Moayad_Regular', Arial, Helvetica, sans-serif;" class="blast-root">BIM Design and Modeling</h1>
 
 
             <p class="blast-root" style="font-family:'Moayad_Light', Arial, Helvetica, sans-serif;">This service is summarized as creating and documenting your design in any form needed, our BIM models can be modeled up to 7D ,giving our clients the ability to simulate and coordinate their design in all disciplines, moreover we can apply revolutionary design ideas using parametric architecture methods.<br><br>
@@ -167,7 +167,7 @@ In addition, modelling can be done for analysis purposes.</p>
         </div>
         
         <div style="display: none" id="c2">
-         <h1 style="color:#FFF;font-family:'Moayad_Regular', Arial, Helvetica, sans-serif;" class="content">BIM Research and Strategy Development</h1>
+         <h1 style="color:#FFF;font-family:'Moayad_Regular', Arial, Helvetica, sans-serif;" class="blast-root">BIM Research and Strategy Development</h1>
 
 
             <p class="blast-root" style="font-family:'Moayad_Light', Arial, Helvetica, sans-serif;"><span style="font-family:'Moayad_Regular', Arial, Helvetica, sans-serif; font-size:14pt;">BIM Lab </span> research focuses on assessing the ability to transfer to BIM with the available team and equipment in addition to provide strategic solutions and timelines to your transformation process and developing your workflow.</p>
