--- a/projects - Copy.html
+++ b/projects - Copy.html
@@ -388,7 +388,7 @@
                 <a href="project1.html"target="_blank"><img src="New folder\Ray White Residence _ BIM Lab\Renders (2880px)\TNAIL\001.jpg" alt="image1" style="width:100%;border-radius: 4%;"></a>
                 <a href="project-2.html"target="_blank"><img src="02 - Haidar Murad\night 1.jpg" style="width:100%;border-radius: 4%;"></a>
                 <a href="project  - 10 .html"target="_blank"><img src="PRIVATE VILLA\002.jpeg" style="width:100%;border-radius: 4%;"></a>
-                <a href="project - 12.html"target="_blank"><img src="MIXED USED\001.jpeg" style="width:100%;border-radius: 4%;"></a>
+                <a href="project - 12.html"target="_blank"><img src="MIXED USED\001.JPEG" style="width:100%;border-radius: 4%;"></a>
                 <!-- <a href="services.html"target="_blank"><img src="image test\images (6).jfif" style="width:100%;border-radius: 4%;"></a>
                 <a href="index.html"target="_blank"><img src="image test\images (7).jfif" style="width:100%;border-radius: 4%;"></a> -->
               </div>
