make the site responsive

--- a/about.html
+++ b/about.html
@@ -373,49 +373,12 @@ collaboration.
 
             </div>
             <body>
-                <!-- <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>
-            <p>hi</p>               -->
+            <div style="background-color: #808080; position:relative;border-radius: 5%;">
             <p>BIM Lab exists where design, building and technology intersect.BIM Lab is an engineering services company we combine the knowledge and experience of architecture, engineering, project management,</p>
             <p>software engineering and education with a passion for technology to improve the ways of how buildings are designed and constructed.  </p>           
             <p>Building Information as a booming technology and industry has some theoretical principles. BIM Lab helps the institutes to identify, </p>
             <p> implement and manage this technology and business practice that will enable more effective coordination, communication and collaboration.</p>
-            
+            </div>
             </body>
             <a class="blog-link" href="clients.php">
                 <img src="img/blogdark.png">
