--- a/project - 13.html
+++ b/project - 13.html
@@ -182,8 +182,8 @@
         clear: both;
     }
     .column {
-        float: left;
-        width: 12.5%;
+        float: auto;
+        width: 100%;
     }
     .demo {
         opacity: 0.6;
@@ -201,15 +201,7 @@
       color: #333;
     }
     </style>
-    </head>
-    <!-- <body>
-        <div class=""></div>
-        <a href="index.html"><img src="image test\1.jpg" alt="image1" style="width: 24%; border-radius: 3%;" height="900px"></a>                
-        <a href="index.html"><img src="image test\2.jpg" alt="image1" style="width: 24%;border-radius: 3%" height="900px"></a>                
-        <a href="index.html"><img src="image test\3.jpg" alt="image1" style="width: 24%;border-radius: 3%" height="900px"></a>                
-        <a href="index.html"><img src="image test\4.jpg" alt="image1" style="width: 24%;border-radius: 3%" height="900px"></a>                
-       <!--<div class="bg-text">BIM LAB</div>-->
-    
+    </head>    
     </body> 
     <style>
     
@@ -310,7 +302,7 @@ vertical-align: middle;
 
 /* Position the image container (needed to position the left and right arrows) */
 .container {
-position: top;
+position: height="35%";
 }
 
 /* Hide the images by default */
@@ -478,7 +470,7 @@ opacity: 1;
 <!--low hover images galeray-->
 <div class="row">
 <div class="column">
-  <img class="demo cursor" src="MIXED USED\000.jpeg" style="width:100%;height: 93.27px;" onclick="currentSlide(1)" alt="PWC">
+  <img class="demo cursor" src="MIXED USED\000.jpeg" style="width:100%;height: auto;" onclick="currentSlide(1)" alt="PWC">
 </div>
 <div class="row">
 <!-- <div class="column">
